--- a/public/bower.json
+++ b/public/bower.json
@@ -13,5 +13,12 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "bootstrap": "^4.1.3",
+    "angular": "^1.7.3",
+    "angular-route": "^1.7.3",
+    "popper.js": "^1.14.4"
+  }
 }
