--- a/public/bower.json
+++ b/public/bower.json
@@ -19,6 +19,8 @@
     "bootstrap": "^4.1.3",
     "angular": "^1.7.3",
     "angular-route": "^1.7.3",
-    "popper.js": "^1.14.4"
+    "popper.js": "^1.14.4",
+    "moment": "^2.22.2",
+    "font-awesome": "^5.3.1"
   }
 }
