--- a/public/bower.json
+++ b/public/bower.json
@@ -20,7 +20,6 @@
     "angular": "^1.7.3",
     "angular-route": "^1.7.3",
     "popper.js": "^1.14.4",
-    "moment": "^2.22.2",
-    "font-awesome": "^5.3.1"
+    "MDBootstrap": "^4.5.9"
   }
 }
